--- a/.azuredevops/pipelines/validate-selfhosted-agents-helm.template.yml
+++ b/.azuredevops/pipelines/validate-selfhosted-agents-helm.template.yml
@@ -200,6 +200,8 @@ stages:
                 $ext = (& az extension list --query "[?name=='azure-devops']" -o json) | ConvertFrom-Json
                 if(-not $ext){ Write-Host 'Installing azure-devops extension'; az extension add --name azure-devops --yes | Out-Null }
 
+                Write-Host "Configuring az devops defaults: org=$orgUrl project=$project"
+
                 $env:AZURE_DEVOPS_EXT_PAT = $pat
                 & az devops configure --defaults organization=$orgUrl project=$project | Out-Null
 
@@ -207,7 +209,26 @@ stages:
                 $useLocal = $false
                 if ('$(useAzureLocal)' -ne '') { $useLocal = '$(useAzureLocal)' -in @('True','true','1') }
                 $useLocalParam = if($useLocal) { 'true' } else { 'false' }
-                $runJson = & az pipelines run --name $pipelineName --parameters instanceNumber=$instance os=linux helloWaitSeconds=$(linuxHelloWaitSeconds) useAzureLocal=$useLocalParam --output json 2>&1
+                
+                                      
+                # Determine branch to use for queuing the sample pipeline (defensive)
+                $branch = '$(resources.pipeline.deployAgentsHelm.sourceBranch)'
+                
+                # If the resource token was not expanded (literal $[...] or empty), fall back to Build.SourceBranch
+                if ($branch -like '$*' -or [string]::IsNullOrWhiteSpace($branch)) {
+                  $branch = '$(Build.SourceBranch)'
+                }
+                
+                # Final fallback to a safe default if still empty
+                if ([string]::IsNullOrWhiteSpace($branch)) {
+                  $branch = 'refs/heads/main'
+                }
+                
+                # Convert to short branch name (strip refs/heads/)
+                $branch = $branch -replace '^refs/heads/',''
+                # ...continue existing code that calls `az pipelines run --branch $branch`...
+                $runJson = & az pipelines run --name $pipelineName --branch $branch --parameters instanceNumber=$instance os=linux helloWaitSeconds=$(linuxHelloWaitSeconds) useAzureLocal=$useLocalParam --output json 2>&1
+
                 if($LASTEXITCODE -ne 0){ Write-Error $runJson; throw 'Failed to queue sample pipeline run via az pipelines run' }
                 $runObj = $runJson | Out-String | ConvertFrom-Json
                 $runId = $runObj.id
@@ -410,7 +431,27 @@ stages:
                 $useLocal = $false
                 if ('$(useAzureLocal)' -ne '') { $useLocal = '$(useAzureLocal)' -in @('True','true','1') }
                 $useLocalParam = if($useLocal) { 'true' } else { 'false' }
-                $runJson = & az pipelines run --name $pipelineName --parameters instanceNumber=$instance os=windows helloWaitSeconds=$(windowsHelloWaitSeconds) useAzureLocal=$useLocalParam --output json 2>&1
+
+                
+                # Determine branch to use for queuing the sample pipeline (defensive)
+                $branch = '$(resources.pipeline.deployAgentsHelm.sourceBranch)'
+                
+                # If the resource token was not expanded (literal $[...] or empty), fall back to Build.SourceBranch
+                if ($branch -like '$*' -or [string]::IsNullOrWhiteSpace($branch)) {
+                  $branch = '$(Build.SourceBranch)'
+                }
+                
+                # Final fallback to a safe default if still empty
+                if ([string]::IsNullOrWhiteSpace($branch)) {
+                  $branch = 'refs/heads/main'
+                }
+                
+                # Convert to short branch name (strip refs/heads/)
+                $branch = $branch -replace '^refs/heads/',''
+                
+                $runJson = & az pipelines run --name $pipelineName --branch $branch --parameters instanceNumber=$instance os=windows helloWaitSeconds=$(windowsHelloWaitSeconds) useAzureLocal=$useLocalParam --output json 2>&1
+
+                
                 if($LASTEXITCODE -ne 0){ Write-Error $runJson; throw 'Failed to queue sample pipeline run via az pipelines run' }
                 $runObj = $runJson | Out-String | ConvertFrom-Json
                 $runId = $runObj.id
