--- a/.azuredevops/pipelines/deploy-aks.yml
+++ b/.azuredevops/pipelines/deploy-aks.yml
@@ -8,17 +8,17 @@ pr: none
 parameters:
   - name: AZURE_SERVICE_CONNECTION
     type: string
-    default: "DOS_DevOpsShield_Prod"
+    default: "ADO_SvcConnRgScopedProd"
     values:
-      - "DOS_DevOpsShield_Prod"
+      - "ADO_SvcConnRgScopedProd"
   - name: ACR_NAME
     type: string
-    default: "devopsabcsrunners"
+    default: "cragents0036o3yuvhlr3ygc"
     values:
-      - "devopsabcsrunners"
+      - "cragents0036o3yuvhlr3ygc"
   - name: SkipContainerRegistry
     type: boolean
-    default: True
+    default: False
   - name: InstanceNumber
     type: string
     default: "003"
