--- a/.azuredevops/pipelines/validate-selfhosted-agents-helm.yml
+++ b/.azuredevops/pipelines/validate-selfhosted-agents-helm.yml
@@ -26,13 +26,13 @@ parameters:
 resources:
   pipelines:
     - pipeline: deployAgentsHelm
-      source: DevOpsAgentswithK8S-deploy-self-hosted-agents-helm
+      source: ADO_az-devops-agents-k8s-deploy-self-hosted-agents-helm
       trigger: true # automatic trigger on successful run of source pipeline
 
 variables:
-  - group: "DevOpsAgentswithK8S-003" # to get AZDO_PAT
+  - group: "ADO_az-devops-agents-k8s-003" # to get AZDO_PAT
   - name: samplePipelineNameHelm
-    value: DevOpsAgentswithK8S-run-on-selfhosted-pool-sample-helm # changed to helm pipeline name
+    value: ADO_az-devops-agents-k8s-run-on-selfhosted-pool-sample-helm # changed to helm pipeline name
 
 stages:
   - stage: LoadConfig
@@ -201,6 +201,7 @@ stages:
                 if(-not $ext){ Write-Host 'Installing azure-devops extension'; az extension add --name azure-devops --yes | Out-Null }
 
                 Write-Host "Configuring az devops defaults: org=$orgUrl project=$project"
+
                 $env:AZURE_DEVOPS_EXT_PAT = $pat
                 & az devops configure --defaults organization=$orgUrl project=$project | Out-Null
 
@@ -208,7 +209,8 @@ stages:
                 $useLocal = $false
                 if ('$(useAzureLocal)' -ne '') { $useLocal = '$(useAzureLocal)' -in @('True','true','1') }
                 $useLocalParam = if($useLocal) { 'true' } else { 'false' }
-                      
+                
+                                      
                 # Determine branch to use for queuing the sample pipeline (defensive)
                 $branch = '$(resources.pipeline.deployAgentsHelm.sourceBranch)'
                 
@@ -226,6 +228,7 @@ stages:
                 $branch = $branch -replace '^refs/heads/',''
                 # ...continue existing code that calls `az pipelines run --branch $branch`...
                 $runJson = & az pipelines run --name $pipelineName --branch $branch --parameters instanceNumber=$instance os=linux helloWaitSeconds=$(linuxHelloWaitSeconds) useAzureLocal=$useLocalParam --output json 2>&1
+
                 if($LASTEXITCODE -ne 0){ Write-Error $runJson; throw 'Failed to queue sample pipeline run via az pipelines run' }
                 $runObj = $runJson | Out-String | ConvertFrom-Json
                 $runId = $runObj.id
@@ -428,6 +431,7 @@ stages:
                 $useLocal = $false
                 if ('$(useAzureLocal)' -ne '') { $useLocal = '$(useAzureLocal)' -in @('True','true','1') }
                 $useLocalParam = if($useLocal) { 'true' } else { 'false' }
+
                 
                 # Determine branch to use for queuing the sample pipeline (defensive)
                 $branch = '$(resources.pipeline.deployAgentsHelm.sourceBranch)'
@@ -446,6 +450,8 @@ stages:
                 $branch = $branch -replace '^refs/heads/',''
                 
                 $runJson = & az pipelines run --name $pipelineName --branch $branch --parameters instanceNumber=$instance os=windows helloWaitSeconds=$(windowsHelloWaitSeconds) useAzureLocal=$useLocalParam --output json 2>&1
+
+                
                 if($LASTEXITCODE -ne 0){ Write-Error $runJson; throw 'Failed to queue sample pipeline run via az pipelines run' }
                 $runObj = $runJson | Out-String | ConvertFrom-Json
                 $runId = $runObj.id
@@ -600,4 +606,3 @@ stages:
                 $lines | Out-File $out -Encoding utf8
                 Write-Host "##vso[task.addattachment type=Distributedtask.Core.Summary;name=Agent Validation]$out"
                 $lines | ForEach-Object { Write-Host $_ }
-
