--- a/.azuredevops/pipelines/weekly-agent-images-refresh.yml
+++ b/.azuredevops/pipelines/weekly-agent-images-refresh.yml
@@ -26,14 +26,14 @@ schedules:
 parameters:
   - name: AZURE_SERVICE_CONNECTION
     type: string
-    default: "ADO_SvcConnRgScopedProd"
+    default: "DOS_DevOpsShield_Prod"
     values:
-      - "ADO_SvcConnRgScopedProd"
+      - "DOS_DevOpsShield_Prod"
   - name: ACR_NAME
     type: string
-    default: "cragents0036o3yuvhlr3ygc"
+    default: "devopsabcsrunners"
     values:
-      - "cragents0036o3yuvhlr3ygc"
+      - "devopsabcsrunners"
   - name: skipLinux
     type: boolean
     default: false
@@ -769,4 +769,3 @@ jobs:
         inputs:
           PathtoPublish: $(Pipeline.Workspace)
           ArtifactName: pipeline-workspace-dump
-
