--- a/.azuredevops/pipelines/uninstall-selfhosted-agents-helm.template.yml
+++ b/.azuredevops/pipelines/uninstall-selfhosted-agents-helm.template.yml
@@ -70,7 +70,7 @@ parameters:
     default: "__KUBECONFIG_SECRET_FILE__"
   - name: useOnPremAgents
     type: boolean
-    default: true # Set to true to use on-premises agents, false to use cloud agents
+    default: __USE_ONPREM_AGENTS__ # Set to true to use on-premises agents, false to use cloud agents
 
 variables:
   - group: "__AZURE_DEVOPS_VARIABLE_GROUP__" # to get AZDO_PAT
@@ -86,14 +86,14 @@ stages:
         pool:
           ${{ if eq(parameters.useAzureLocal, false) }}:
             ${{ if eq(parameters.useOnPremAgents, true) }}:
-              name: UbuntuLatestPoolOnPrem
+              name: __UBUNTU_ONPREM_POOL_NAME__
             ${{ else }}:
               vmImage: ubuntu-latest
           ${{ else }}:
             ${{ if ne(parameters.bootstrapPoolName, '') }}:
               name: ${{ parameters.bootstrapPoolName }}
             ${{ else }}:
-              name: WindowsLatestPoolOnPrem
+              name: __WINDOWS_ONPREM_POOL_NAME__
         steps:
           - checkout: self
 
@@ -249,7 +249,7 @@ stages:
         condition: always()
         pool:
           ${{ if parameters.useOnPremAgents }}:
-            name: UbuntuLatestPoolOnPrem
+            name: __UBUNTU_ONPREM_POOL_NAME__
           ${{ else }}:
             vmImage: ubuntu-latest
         steps:
