--- a/.azuredevops/pipelines/weekly-agent-images-refresh.template.yml
+++ b/.azuredevops/pipelines/weekly-agent-images-refresh.template.yml
@@ -60,7 +60,7 @@ parameters:
     displayName: Fail pipeline if GitVersion fallback (date+sha) is used
   - name: useOnPremAgents
     type: boolean
-    default: true # Set to true to use on-premises agents, false to use cloud agents
+    default: __USE_ONPREM_AGENTS__ # Set to true to use on-premises agents, false to use cloud agents
 
 variables:
   - name: ACR_NAME
@@ -77,7 +77,7 @@ jobs:
     displayName: Resolve semantic version / tag suffix
     pool:
       ${{ if parameters.useOnPremAgents }}:
-        name: UbuntuLatestPoolOnPrem
+        name: __UBUNTU_ONPREM_POOL_NAME__
       ${{ else }}:
         vmImage: ubuntu-latest
     steps:
@@ -192,7 +192,7 @@ jobs:
     dependsOn: [Versioning]
     pool:
       ${{ if parameters.useOnPremAgents }}:
-        name: UbuntuLatestPoolOnPrem
+        name: __UBUNTU_ONPREM_POOL_NAME__
       ${{ else }}:
         vmImage: ubuntu-latest
     steps:
@@ -279,7 +279,7 @@ jobs:
     condition: and(succeeded(), eq(dependencies.Preflight.outputs['PreflightVars.ACR_READY'],'true'), eq(${{ parameters.skipLinux }}, false))
     pool:
       ${{ if parameters.useOnPremAgents }}:
-        name: UbuntuLatestPoolOnPrem
+        name: __UBUNTU_ONPREM_POOL_NAME__
       ${{ else }}:
         vmImage: ubuntu-latest
     variables:
@@ -354,7 +354,7 @@ jobs:
     condition: and(succeeded(), eq(dependencies.Preflight.outputs['PreflightVars.ACR_READY'],'true'), eq(${{ parameters.skipWindows }}, false))
     pool:
       ${{ if parameters.useOnPremAgents }}:
-        name: WindowsLatestPoolOnPrem
+        name: __WINDOWS_ONPREM_POOL_NAME__
       ${{ else }}:
         vmImage: windows-latest
     variables:
@@ -434,7 +434,7 @@ jobs:
     condition: and(succeeded(), eq(dependencies.Preflight.outputs['PreflightVars.ACR_READY'],'true'), eq(${{ parameters.skipWindows }}, false))
     pool:
       ${{ if parameters.useOnPremAgents }}:
-        name: WindowsLatestPoolOnPrem
+        name: __WINDOWS_ONPREM_POOL_NAME__
       ${{ else }}:
         vmImage: windows-latest
     variables:
@@ -515,7 +515,7 @@ jobs:
     condition: and(succeeded(), eq(dependencies.Preflight.outputs['PreflightVars.ACR_READY'],'true'), eq(${{ parameters.skipWindows }}, false))
     pool:
       ${{ if parameters.useOnPremAgents }}:
-        name: WindowsLatestPoolOnPrem
+        name: __WINDOWS_ONPREM_POOL_NAME__
       ${{ else }}:
         vmImage: windows-latest
     variables:
@@ -604,7 +604,7 @@ jobs:
     condition: succeededOrFailed()
     pool:
       ${{ if parameters.useOnPremAgents }}:
-        name: UbuntuLatestPoolOnPrem
+        name: __UBUNTU_ONPREM_POOL_NAME__
       ${{ else }}:
         vmImage: ubuntu-latest
     variables:
